# CUDATemplate

./: CMakeLists.txt  README.md
.github/workflows/: Ubuntu.yml  Windows.yml
CUDAExec/: CMakeLists.txt
CUDAExec/include/: CUDATemplate.cu
CUDALib/: CMakeLists.txt
CUDALib/include/: CUDALib.cu  CUDALib.h
CUDATemplate/: CUDATemplate.cu  helper.h
cmake/: AutoDetectCudaArch.cmake
